WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243937
REGRESSION(
252821@main
): wpt /css/css-overflow/overflow-scroll-intrinsic-001.html
https://bugs.webkit.org/show_bug.cgi?id=243937
Summary
REGRESSION(252821@main): wpt /css/css-overflow/overflow-scroll-intrinsic-001....
Sam Sneddon [:gsnedders]
Reported
2022-08-15 09:28:15 PDT
Per wpt.fyi:
https://wpt.fyi/results/css/css-overflow/overflow-scroll-intrinsic-001.html?label=master&label=experimental&product=safari-150%20preview&product=safari-151%20preview&view=subtest
Attachments
Patch
(3.13 KB, patch)
2022-08-15 19:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.69 KB, patch)
2022-08-15 19:42 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.72 KB, patch)
2022-08-16 07:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-15 09:28:32 PDT
<
rdar://problem/98673249
>
alan
Comment 2
2022-08-15 14:45:52 PDT
This looks specific to _empty_ inline blocks.
alan
Comment 3
2022-08-15 14:46:25 PDT
(In reply to zalan from
comment #2
)
> This looks specific to _empty_ inline blocks.
This looks specific to _empty_ inline blocks with vertical writing mode.
alan
Comment 4
2022-08-15 14:58:21 PDT
oh funny, IFC aligns the boxes based on geometry that includes the non-existing scrollbar (placeholder).
alan
Comment 5
2022-08-15 19:39:01 PDT
Created
attachment 461656
[details]
Patch
alan
Comment 6
2022-08-15 19:42:35 PDT
Created
attachment 461657
[details]
Patch
alan
Comment 7
2022-08-16 07:38:21 PDT
Created
attachment 461672
[details]
Patch
EWS
Comment 8
2022-08-16 20:16:05 PDT
Committed
253501@main
(260d835be9b4): <
https://commits.webkit.org/253501@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461672
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug