REGRESSION(252821@main): wpt /css/css-overflow/overflow-scroll-intrinsic-001.html https://bugs.webkit.org/show_bug.cgi?id=243937

Reviewed by Simon Fraser.

The horizontal scrollbar takes vertical space, while the vertical scrollbar takes horizontal space in block containers (inline-block in this case).
With orthogonal writing modes, e.g when the child inline-block direction is flipped to vertical (<div id=horizontal_bfc>horizontal<div style="display: inline-block; writing-mode: vertical-lr">vertical<div></div>) its horizontal scrollbar starts taking horizontal space in the IFC it lives in (horizontal_bfc) while the vertical scrollbar takes vertical space.
This code assumed that we need to flip these values, but the rendering code already has them flipped, meaning that we we ask for the horizontal scrollbar height, it returns the vertical scrollbar's width for orthogonal BFCs.

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::scrollbarLogicalSize):

Canonical link: https://commits.webkit.org/253501@main